@@ -10,10 +10,15 @@ choose-mirror (0.021) UNRELEASED; urgency=low
     - Fix manual mirror entry  (Closes: #219503)
   * Peter Mann
     - Initial Slovak translation (sk.po).
+  * Alastair Mckinstry
+    - Reset default mirror question to "high" by popular demand. 
+     Closes: #219716.
+    Ensure the correct previous question is chosen no matter what
+    priority the questions have. 
   * Denis Barbier
     - Sort country names according to current language.
 
- -- Sebastian Ley <ley@debian.org>  Fri,  7 Nov 2003 11:38:15 +0100
+ -- Alastair McKinstry <mckinstry@debian.org>  Sun,  9 Nov 2003 22:24:38 +0000
 
 choose-mirror (0.020) unstable; urgency=low
 
